# sip_python

./: .bazelrc  .gitignore  MODULE.bazel  README.md  pyproject.toml  requirements.in  setup.py
.github/workflows/: pip.yml  wheels.yml
bazel/: extensions.bzl
sip_python/: BUILD  __init__.py  sip_python.cpp
src/: BUILD.bazel  sip_python.cpp
src/sip_python/: __init__.py  helpers.py
test/: BUILD  simple_nlp.py  simple_qp.py
tests/: simple_nlp.py  simple_qp.py  test_simple_constrained_lqr.py  test_simple_lqr.py  test_simple_nlp.py  test_simple_qp.py
