module(name = "sip_python", version = "0.0.1")

# SIP
# https://github.com/joaospinto/sip
bazel_dep(name = "sip", dev_dependency = True)
git_override(
    module_name = "sip",
    remote = "https://github.com/joaospinto/sip.git",
    commit = "5b493ee53cb35d406ad0da2496006f552f710039",
)

# SIP_QDLDL
# https://github.com/joaospinto/sip_qdldl
bazel_dep(name = "sip_qdldl", dev_dependency = True)
git_override(
    module_name = "sip_qdldl",
    remote = "https://github.com/joaospinto/sip_qdldl.git",
    commit = "6f024b68dabd3e1d4496605842f777d9408e75c5",
)

# A sparse quasi-definite linear system solver (via L D L^T).
# https://github.com/osqp/qdldl
bazel_dep(name = "qdldl", version = "0.1.7")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
)

# nanobind and its dependencies.
bazel_dep(name = "robin-map", version = "1.3.0")
bazel_dep(name = "nanobind_bazel", version = "2.6.1")

# eigen (for nanobind's native sparse matrix support)
bazel_dep(name = "eigen", version = "4.0.0-20241125.bcr.1")

# Set up Python and pip.
bazel_dep(name = "rules_python", version = "1.3.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.10")
python.toolchain(python_version = "3.11")
python.toolchain(python_version = "3.12")
python.toolchain(python_version = "3.13", is_default = True)
use_repo(python, python = "python_versions")
